@@ -16,7 +16,7 @@ class Reference(Field):
     def __init__(self, string='', selection=None, help='', required=False,
             readonly=False, domain=None, states=None, change_default=False,
             select=0, on_change=None, on_change_with=None, depends=None,
-            order_field=None, context=None):
+            order_field=None, context=None, loading='eager'):
         '''
         :param selection: A list or a function name that returns a list.
             The list must be a list of tuples. First member is an internal name
@@ -26,7 +26,8 @@ class Reference(Field):
                 required=required, readonly=readonly, domain=domain,
                 states=states, change_default=change_default, select=select,
                 on_change=on_change, on_change_with=on_change_with,
-                depends=depends, order_field=order_field, context=context)
+                depends=depends, order_field=order_field, context=context,
+                loading=loading)
         self.selection = selection or None
 
     __init__.__doc__ += Field.__init__.__doc__
